Library moved to src/ and the app to app/SwishApp
--HG--
rename : exesrc/Swish.hs => app/SwishApp.hs
rename : Data/Interned/URI.hs => src/Data/Interned/URI.hs
rename : Swish.hs => src/Swish.hs
rename : Swish/RDF.hs => src/Swish/RDF.hs
rename : Swish/RDF/BuiltInDatatypes.hs => src/Swish/RDF/BuiltInDatatypes.hs
rename : Swish/RDF/BuiltInMap.hs => src/Swish/RDF/BuiltInMap.hs
rename : Swish/RDF/BuiltInRules.hs => src/Swish/RDF/BuiltInRules.hs
rename : Swish/RDF/ClassRestrictionRule.hs => src/Swish/RDF/ClassRestrictionRule.hs
rename : Swish/RDF/Datatype.hs => src/Swish/RDF/Datatype.hs
rename : Swish/RDF/GraphClass.hs => src/Swish/RDF/GraphClass.hs
rename : Swish/RDF/GraphMatch.hs => src/Swish/RDF/GraphMatch.hs
rename : Swish/RDF/GraphMem.hs => src/Swish/RDF/GraphMem.hs
rename : Swish/RDF/GraphPartition.hs => src/Swish/RDF/GraphPartition.hs
rename : Swish/RDF/MapXsdInteger.hs => src/Swish/RDF/MapXsdInteger.hs
rename : Swish/RDF/N3Formatter.hs => src/Swish/RDF/N3Formatter.hs
rename : Swish/RDF/N3Parser.hs => src/Swish/RDF/N3Parser.hs
rename : Swish/RDF/NTFormatter.hs => src/Swish/RDF/NTFormatter.hs
rename : Swish/RDF/NTParser.hs => src/Swish/RDF/NTParser.hs
rename : Swish/RDF/Proof.hs => src/Swish/RDF/Proof.hs
rename : Swish/RDF/RDFDatatype.hs => src/Swish/RDF/RDFDatatype.hs
rename : Swish/RDF/RDFDatatypeXsdInteger.hs => src/Swish/RDF/RDFDatatypeXsdInteger.hs
rename : Swish/RDF/RDFDatatypeXsdString.hs => src/Swish/RDF/RDFDatatypeXsdString.hs
rename : Swish/RDF/RDFGraph.hs => src/Swish/RDF/RDFGraph.hs
rename : Swish/RDF/RDFGraphShowM.hs => src/Swish/RDF/RDFGraphShowM.hs
rename : Swish/RDF/RDFParser.hs => src/Swish/RDF/RDFParser.hs
rename : Swish/RDF/RDFProof.hs => src/Swish/RDF/RDFProof.hs
rename : Swish/RDF/RDFProofContext.hs => src/Swish/RDF/RDFProofContext.hs
rename : Swish/RDF/RDFQuery.hs => src/Swish/RDF/RDFQuery.hs
rename : Swish/RDF/RDFRuleset.hs => src/Swish/RDF/RDFRuleset.hs
rename : Swish/RDF/RDFVarBinding.hs => src/Swish/RDF/RDFVarBinding.hs
rename : Swish/RDF/Ru

--- a/CHANGES
+++ b/CHANGES
@@ -7,37 +7,36 @@
     terms added to the pre-existing vocabularies). A few have also
     been added to Swish.RDF.RDFGraph.
 
-  - Minimum Cabal version has been updated to 1.9.2 as the tests
-    have been converted to take advantage of the support now in
-    Cabal; this means that the tests flag has been replaced by
-    the --enable-tests option.
+  - Minimum Cabal version has been updated to 1.9.2 as the tests have
+    been converted to take advantage of the support now in Cabal; this
+    means that the tests flag has been replaced by the --enable-tests
+    option.
 
-  - Moved src/ to exesrc/, which is a terrible name.
+  - Moved src/ to app/, and took advantage of the emptiness to move
+    the library code into src/.
 
 TODO: can we "fix" the variable-naming issues in RDFProof?
 
 0.6.1.2:
 
-  - corrected mtl constraint from >= 1 to >= 2 as the code does
-    not build with mtl=1 and increased the upper limit on time
-    to 1.4.
+  - corrected mtl constraint from >= 1 to >= 2 as the code does not
+    build with mtl=1 and increased the upper limit on time to 1.4.
 
 0.6.1.1:
 
-  - minor improvements to error message when parsing Turtle,
-    N3 or Ntriples format; a fragment of the remaining text to be
-    parsed is included to provide some context for the user (it
-    is still not as useful as the error message provided when
-    parsec was being used).
+  - minor improvements to error message when parsing Turtle, N3 or
+    Ntriples format; a fragment of the remaining text to be parsed is
+    included to provide some context for the user (it is still not as
+    useful as the error message provided when parsec was being used).
 
 0.6.1.0:
 
   - add support for reading and writing Turtle format and the
-    Swish.RDF.TurtleFormatter and Swish.RDF.TurtleParser modules.
-    No tests are provided at this time, although the parser handles
-    most of the W3C test files; the issues include Network.URI
-    not recognizing some IRI's and issues with equating XSD decimal
-    and double values due to canonicalization.
+    Swish.RDF.TurtleFormatter and Swish.RDF.TurtleParser modules.  No
+    tests are provided at this time, although the parser handles most
+    of the W3C test files; the issues include Network.URI not
+    recognizing some IRI's and issues with equating XSD decimal and
+    double values due to canonicalization.
 
 0.6.0.1:
 
