--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+0.6.3.0:
+
+  - Added Swish.RDF.Vocabulary.SIOC.
+
+0.6.2.1:
+
+  - hackage build fixes only
+
 0.6.2.0:
 
   - Split out vocabularies into Swish.RDF.Vocabulary.DublinCore,
