Actual HCAR entry for November 2011
--HG--
rename : hcar/2011-11/swish.tex => hcar/2011-11/Swish-DS.tex

--- a/hcar/2011-11/Swish-DS.tex
+++ b/hcar/2011-11/Swish-DS.tex
@@ -1,5 +1,5 @@
 % Swish-DS.tex
-\begin{hcarentry}[new]{Swish}
+\begin{hcarentry}[updated]{Swish}
 \report{Douglas Burke}%11/11
 \status{experimental}
 \participants{Graham Klyne, Vasili I Galchin}
