--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 This is an update to Swish [1,2] so that it builds with a recent
-Haskell platform (although it has not been tested against ghc-7 and
-the 2011.2.0.0 Haskell Platform releases).
+Haskell platform.
 
 For more information on this release see [3].
 
