--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,9 @@
   - Removed the containedIn element of the LDGraph type class as it
     was unused.
 
+  - Bump the upper constraint on the containers package to include
+    version 0.5.
+
   - Support version 0.9 of intern using conditional compilation in
     Data.Interned.URI (for ghc 7.4)
 
