--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,8 @@
   - Switch to Control.Exception.try from System.IO.Error.try to avoid
     complaints from ghc 7.4.2
 
+  - Removed the Swish.Utils.MiscHelpers module.
+
 0.6.5.3:
 
   - Updated cabal file so that tests depend on the library rather
