Swish.RDF.RDFDatatypeXsdDecimal is for xsd:decimal, not xsd:double (is this sensible)?

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,9 @@
   - Removed asubj, apred and aobj from Swish.RDF.GraphClass and
     Swish.RDF.RDFGraph; use arcSubj, arcPred or arcObj instead.
     
+  - Clarified that Swish.RDF.RDFDatatypeXsdDecimal is for xsd:decimal
+    rather than xsd:double.
+
   - Removed the containedIn element of the LDGraph type class as it
     was unused.
 
