Minor doc changes

--- a/CHANGES
+++ b/CHANGES
@@ -15,7 +15,10 @@
     rather than xsd:double.
 
   - Removed the containedIn element of the LDGraph type class as it
-    was unused.
+    was un-used.
+
+  - Removed various exported symbols from a range of modules as they were
+    un-used.
 
   - Bump the upper constraint on the containers package to include
     version 0.5.
