Formatting modules moved to Swish.RDF.Formatter.*
--HG--
rename : src/Swish/RDF/N3Formatter.hs => src/Swish/RDF/Formatter/N3.hs
rename : src/Swish/RDF/NTFormatter.hs => src/Swish/RDF/Formatter/NTriples.hs
rename : src/Swish/RDF/TurtleFormatter.hs => src/Swish/RDF/Formatter/Turtle.hs

--- a/CHANGES
+++ b/CHANGES
@@ -5,8 +5,10 @@
     codes are now represented by Swish.RDF.Vocabulary.LanguageTag
     rather than as a ScopedName.
 
-  - Parsing modules are now in the Swish.RDF.Parser hiearchy and
+  - Parsing modules are now in the Swish.RDF.Parser hierarchy and
     Swish.RDF.RDFParser has been renamed to Seish.RDF.Parser.Utils.
+
+  - Formatting modules are now in the Swish.RDF.Formatter hierarchy.
 
   - Removed mkTypedLit from Swish.RDF.RDFParser; use
     Swish.RDF.RDFDatatype.makeDataTypedLiteral instead.
