Moved Datatype modules around
--HG--
rename : src/Swish/RDF/Datatype.hs => src/Swish/Datatype.hs
rename : src/Swish/RDF/RDFDatatype.hs => src/Swish/RDF/Datatype.hs
rename : src/Swish/RDF/RDFDatatypeXsdDecimal.hs => src/Swish/RDF/Datatype/XSD/Decimal.hs
rename : src/Swish/RDF/RDFDatatypeXsdInteger.hs => src/Swish/RDF/Datatype/XSD/Integer.hs
rename : src/Swish/RDF/MapXsdDecimal.hs => src/Swish/RDF/Datatype/XSD/MapDecimal.hs
rename : src/Swish/RDF/MapXsdInteger.hs => src/Swish/RDF/Datatype/XSD/MapInteger.hs
rename : src/Swish/RDF/RDFDatatypeXsdString.hs => src/Swish/RDF/Datatype/XSD/String.hs

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,9 @@
 
   - Formatting modules are now in the Swish.RDF.Formatter hierarchy.
 
+  - Moved a number of modules around: generic code directly into Swish
+    and the Swish.RDF.RDF* forms renamed to Swish.RDF.*.
+
   - Removed mkTypedLit from Swish.RDF.RDFParser; use
     Swish.RDF.RDFDatatype.makeDataTypedLiteral instead.
 
