--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ Some things I want to/should do (not in order)
 
 - Check test coverage since the removal of some of the routines
   (e.g. those in ListHelpers) has lead to the removal of some tests:
-  GraphTest.select
+  GraphTest select/pairSort
 
 - Should the Lit/LangLit/TypedLit constructors of RDFLabel be moved
   into a separate constructor - e.g. 
