Moved Swish.Utils.PartOrderedCollection to Data.Ord.Partial
--HG--
rename : src/Swish/Utils/PartOrderedCollection.hs => src/Data/Ord/Partial.hs

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 0.7.0.0:
 
   - Moved a number of modules around: generic code directly into Swish
-    and the Swish.RDF.RDF* forms renamed to Swish.RDF.*.
+    and the Swish.RDF.RDF* forms renamed to Swish.RDF.*. Some modules
+    have been moved out of the Swish.Utils.* namespace.
 
   - Parsing modules are now in the Swish.RDF.Parser hierarchy and
     Swish.RDF.RDFParser has been renamed to Seish.RDF.Parser.Utils.
