Moved Swish.Utils.ShowM to Data.String.ShowLines
--HG--
rename : src/Swish/Utils/ShowM.hs => src/Data/String/ShowLines.hs
rename : src/Swish/RDF/GraphShowM.hs => src/Swish/RDF/GraphShowLines.hs

--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,8 @@
 
   - Moved a number of modules around: generic code directly into Swish
     and the Swish.RDF.RDF* forms renamed to Swish.RDF.*. Some modules
-    have been moved out of the Swish.Utils.* namespace.
+    have been moved out of the Swish.Utils.* namespace. Generic modiles
+    have been placed into the @Data.*@ namespace.
 
   - Parsing modules are now in the Swish.RDF.Parser hierarchy and
     Swish.RDF.RDFParser has been renamed to Seish.RDF.Parser.Utils.
