--- a/CHANGES
+++ b/CHANGES
@@ -45,8 +45,9 @@
     to N3/Turtle.
 
   - Minor clean up of the LookupMap module: mergeReplaceOrAdd and mergeReplace
-    are now combined into mergeReplace; mapSelect has been removed; documentation
-    slightly improved, and a few minor internal clean ups.
+    are now combined into mergeReplace; mapSelect, mapApplytoAll, and
+    mapTranslate* have been removed; documentation slightly improved; and a
+    few minor internal clean ups.
 
   - Bump the upper constraint on the containers package to include
     version 0.5.
