--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,17 @@
 0.7.0.0:
 
+  For code that uses the Swish script language, the main change is to
+  import Swish rather than Swish.RDF.SwishMain, and to note that the
+  other Swish.RDF.Swish* modules are now called Swish.*.
+
+  For code that uses the graph library, the main changes are that
+  Swish.RDF.RDFGraph is now called Swish.RDF.Graph, the Lit
+  constructor of the RDFLabel has been split into three (Lit, LangLit,
+  and TypedLit) and a new LanguageTag type introduced, local names now
+  use the LName type (previously they were just Text values), and the
+  parsers and formatters have renamed to Swish.RDF.Parser.* and
+  Swish.RDF.Formatter.*.
+
   - Moved a number of modules around: generic code directly into Swish
     and the Swish.RDF.RDF* forms renamed to Swish.RDF.*. Some modules
     have been moved out of the Swish.Utils.* namespace. Generic modules
@@ -49,6 +61,14 @@
     mapTranslate* have been removed; documentation slightly improved; and a
     few minor internal clean ups.
 
+  - Removed the Swish.Utils.MiscHelpers module and moved single-use
+    functionality out of Swish.Utils.ListHelpers.
+
+  - Removed partCompareOrd, partCompareMaybe, partCompareListOrd and 
+    partCompareListPartOrd from Swish.Utils.PartOrderedCollection.
+
+  - Do not define swap if using GHC >= 7.0.1.
+
   - Bump the upper constraint on the containers package to include
     version 0.5.
 
@@ -57,14 +77,6 @@
 
   - Switch to Control.Exception.try from System.IO.Error.try to avoid
     complaints from ghc 7.4.2
-
-  - Removed the Swish.Utils.MiscHelpers module and moved single-use
-    functionality out of Swish.Utils.ListHelpers.
-
-  - Removed partCompareOrd, partCompareMaybe, partCompareListOrd and 
-    partCompareListPartOrd from Swish.Utils.PartOrderedCollection.
-
-  - Do not define swap if using GHC >= 7.0.1.
 
 0.6.5.3:
 
