--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@
   equiv from Swish.Utils.ListHelpers; the ordering used for RDFLabel
   values has changed; added a Monoid instance for VarBinding; added
   Ord instances for a number of containers; removed some un-needed
-  constraints.
+  constraints; added Network.URI.Ord.
 
   Bumped the minimum containers requirement to 0.5.
 
