--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,9 @@
   where it does not. This definitely speeds up some operations but
   a full analysis has not been attempted.
 
+  Replaced used of Data.LookupMap with Data.Map.Map. This has led to
+  the removal of a number of language extensions from some modules.
+
   A few other minor changes have been made: the removal of subset and
   equiv from Swish.Utils.ListHelpers; the ordering used for RDFLabel
   values has changed; added a Monoid instance for VarBinding; added
