--- a/TODO
+++ b/TODO
@@ -1,28 +1,10 @@
 
 Some things I want to/should do (not in order)
 
-- the removal of LookupMap from formula/formulamap led to functor/
-  traversable instances to require (a -> a rather than (a -> b);
-  this does not seem to be a problem for the existing code, since
-  specialized to RDFLabel, but may want to revert if possible.
-
-  Need to look at the traversable code to see if really a traverse.
-
 - Support IRI rather than URI. See issue #13
   https://bitbucket.org/doug_burke/swish/issue/13/
 
 - Look at using an interned URI in Namespace.
-
-- Can LookupMap be replaced by Map? This would require removing the
-  LookupEntryClass constraint which could cause troublesome.
-
-  There are a number of cases where we have
-
-    M.lookup key $ M.fromList $ map <somefunv> <list-of-vals>
-    mapFindMaybe key $ LookupMap <list-of-vals>
-
-  which can be optimised (no need to create the map since can stop once
-  the element has been found).
 
 - Rename modules. Version 0.7 provided a hopefully more-structured
   form but they are still in the Swish namespace rather than
@@ -47,6 +29,8 @@ Some things I want to/should do (not in order)
 
 - add RDF/XML parser and formatter. See issue #7
   https://bitbucket.org/doug_burke/swish/issue/7/
+
+  Ditto for JSON-LD/the various named-graph forms/...
 
 - Should there be a type-level constaint that an RDF Arc can only have
   a literal in the object position?
