--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.8.0.4:
+
+  Fix failing test on 64-bit GHC (no library change).
+
+  Very minor hlint changes.
+
 0.8.0.3:
 
   Remove hashtable restriction (rewrite tests), remove binary constraint
