--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
-0.8.0.4:
+0.9.0.0:
+
+  The module now builds against version 1.2 or 1.1 of the hashable
+  package; as there have been significant changes to hashable in the
+  1.2 release I have decided to bump up the version number to 0.9
+  as a precaution.
 
   Fix failing test on 64-bit GHC (no library change).
 
