--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.9.0.1:
+
+  Updated the upper bound on the semigroup dependency (thanks to Leif
+  Warner).
+
 0.9.0.0:
 
   The module now builds against version 1.2 or 1.1 of the hashable
