--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.9.0.3:
+
+  Fix minor Haddock issue with Swish.RDF.Parser.Utils.appendURIs.
+
 0.9.0.2:
 
   Updated the upper bound on the polyparse dependency.
