--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 0.9.0.4:
 
+  Improved string formatting for Turtle/N3 output (better handling of
+  string literals with three or more consecutive " characters).
+
   Added tests for the Turtle parser.
 
 0.9.0.3:
