--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 0.9.0.4:
 
-  Improved string formatting for Turtle/N3 output (better handling of
-  string literals with three or more consecutive " characters).
+  Turtle/N3 output: improved string formatting (better handling of
+  string literals with three or more consecutive @"@ characters); blank
+  node handling has been improved but the output may not be as elegant.
 
   Added tests for the Turtle parser.
 
