--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,11 @@
 0.9.0.4:
 
   Turtle/N3 output: improved string formatting (better handling of
-  string literals with three or more consecutive @"@ characters); blank
+  string literals with three or more consecutive " characters); blank
   node handling has been improved but the output may not be as elegant.
+
+  NTriples parser: now accepts upper-case language tags such as
+  en-UK (case is preserved).
 
   Added tests for the Turtle parser.
 
