--- a/CHANGES
+++ b/CHANGES
@@ -7,7 +7,7 @@
   NTriples parser: now accepts upper-case language tags such as
   en-UK (case is preserved).
 
-  Added tests for the Turtle parser.
+  Swish.QName.LName names can now contain #, : and / characters.
 
   The new w3ctests flag will build the runw3ctests executable,
   which will run the W3C Turtle tests (if downloaded from
