--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,8 @@
   which will run the W3C Turtle tests (if downloaded from
   http://www.w3.org/2013/TurtleTests/).
 
+  Minor fixes and additions to the documentation.
+
 0.9.0.3:
 
   Fix minor Haddock issue with Swish.RDF.Parser.Utils.appendURIs.
